--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.14.14",
     "axios": "^1.5.1",
+    "env-cmd": "^10.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-error-boundary": "^4.0.11",
     "react-loading": "^2.0.3",
     "react-loading-icons": "^1.1.0",
     "react-router-dom": "^6.17.0"
