--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-error-boundary": "^4.0.11",
     "react-loading": "^2.0.3",
     "react-loading-icons": "^1.1.0",
-    "react-router-dom": "^6.17.0"
+    "react-router-dom": "^6.17.0",
+    "redux": "^4.2.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
