--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.14.14",
+    "@reduxjs/toolkit": "^1.9.7",
     "axios": "^1.5.1",
     "env-cmd": "^10.1.0",
     "react": "^18.2.0",
@@ -20,6 +21,7 @@
     "react-error-boundary": "^4.0.11",
     "react-loading": "^2.0.3",
     "react-loading-icons": "^1.1.0",
+    "react-redux": "^8.1.3",
     "react-router-dom": "^6.17.0"
   },
   "devDependencies": {
